--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,3 +1,3 @@
-p {
-    padding: 15px; /* Adds 15px of padding around all sides of paragraphs */
+body {
+    padding: 60px; /* Adds 15px of padding around all sides of paragraphs */
   }
