Sat, Dec 23, 2023, 10:41 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,3 +1,5 @@
 body {
-    padding: 60px; /* Adds 15px of padding around all sides of paragraphs */
+    padding: 20px; /* Adds 15px of padding around all sides of paragraphs */
   }
+
+  margin: 15px 0;
