--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding: 20px; /* Adds 15px of padding around all sides of paragraphs */
+    padding: auto; /* Adds 15px of padding around all sides of paragraphs */
   }
 
-  margin: 15px 0;
+  /* margin: 15px 0; */
