Sat, Dec 23, 2023, 10:45 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,5 +1,1 @@
-body {
-    padding: auto; /* Adds 15px of padding around all sides of paragraphs */
-  }
-
-  /* margin: 15px 0; */
+margin: auto; /* Adds 15px of padding around all sides of paragraphs */
