--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,1 +1,3 @@
-margin: auto; /* Adds 15px of padding around all sides of paragraphs */
+html {
+    margin: 20px 30px; /* Adds 15px of padding around all sides of paragraphs */
+  }
