--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,3 +1,8 @@
+
 html {
     margin: 20px 30px; /* Adds 15px of padding around all sides of paragraphs */
+  }
+
+  h1 {
+    text-indent: 20px; /* Indent the first line by 20 pixels */
   }
