Sat, Dec 23, 2023, 10:53 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -4,5 +4,5 @@ html {
   }
 
   h1 {
-    text-indent: 20px; /* Indent the first line by 20 pixels */
+    text-align: center; /* Indent the first line by 20 pixels */
   }
