Sat, Dec 23, 2023, 11:03 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -7,4 +7,15 @@ h1 {
     text-align: center; /* Indent in center */
   }
 
-  
+  nav {
+    padding: 10px; /* Padding for content */
+    text-align: right;
+  }
+
+  a {
+    padding: 10px; /* Padding for content */
+  }
+
+
+
+
