--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -16,6 +16,13 @@ h1 {
     padding: 10px; /* Padding for content */
   }
 
+  .service {
+    background-color: tomato;
+    color: white;
+    border: 2px solid black;
+    margin: 20px;
+    padding: 20px;
+  }
 
 
 
