--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -17,7 +17,7 @@ h1 {
   }
 
   .service {
-    background-color: tomato;
+    background-color: blue;
     color: white;
     border: 2px solid black;
     margin: 20px;
