--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -17,9 +17,16 @@ h1 {
   }
 
   .service {
-    background-color: blue;
+    background-color: #0d83b5;
     color: white;
     border: 2px solid black;
+    margin: 20px;
+    padding: 20px;
+  }
+
+  .container {
+    background-color: #0d83b5;
+    color: white;
     margin: 20px;
     padding: 20px;
   }
