Sat, Dec 23, 2023, 11:28 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -25,9 +25,9 @@ h1 {
   }
 
   .container {
-    background-color: #0d83b5;
+    background-color: white;
     color: white;
-    margin: 20px;
+    margin: 0;
     padding: 20px;
   }
 
