Sat, Dec 23, 2023, 11:31 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -25,9 +25,9 @@ h1 {
   }
 
   .container {
-    background-color: white;
+    background-color: blue;
     color: white;
-    margin: 0;
+    margin: 20px;
     padding: 20px;
   }
 
