--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -19,16 +19,17 @@ h1 {
   .service {
     background-color: #0d83b5;
     color: white;
-    border: 2px solid black;
+    text-align: left;
     margin: 20px;
     padding: 20px;
   }
 
   .container {
-    background-color: blue;
+    background-color: white;
     color: white;
     margin: 20px;
     padding: 20px;
+
   }
 
 
