--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -22,7 +22,7 @@ h1 {
     text-align: left;
     margin: 20px;
     padding: 20px;
-    border-radius: 10px / 5px
+    border-radius: 10px
   }
 
   .container {
