Sat, Dec 23, 2023, 11:40 PM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -10,6 +10,8 @@ h1 {
   nav {
     padding: 10px; /* Padding for content */
     text-align: right;
+    font-weight: bold;
+    font-style: times;
   }
 
   a {
