Sun, Dec 24, 2023, 12:03 AM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -4,7 +4,9 @@ html {
     font-family: Tahoma, Verdana, sans-serif;
   }
 
-
+footer {
+    text-align: center;
+}
   p {
     text-align: left; /* Indent in center */
     font-size: 20px;
