--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -6,6 +6,8 @@ html {
 
 footer {
     text-align: center;
+    font-size: 15px;
+    color: gray;
 }
   p {
     text-align: left; /* Indent in center */
