Sun, Dec 24, 2023, 12:09 AM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -7,7 +7,7 @@ html {
 footer {
     text-align: center;
     font-size: 15px;
-    color: gray;
+    color: #1c1a1a;
 }
   p {
     text-align: left; /* Indent in center */
