--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,22 +1,23 @@
 
-html {
+  html {
     margin: 20px 30px; /* Margin around all sides of doc */
     font-family: Tahoma, Verdana, sans-serif;
   }
 
-footer {
+  footer {
     text-align: center;
     font-size: 15px;
-    color: #1c1a1a;
-}
+    color: #292929;
+    }
+
   p {
     text-align: left; /* Indent in center */
     font-size: 20px;
-  }
+    }
 
   h1 {
     text-align: center; /* Indent in center */
-  }
+    }
 
   nav {
     padding: 10px; /* Padding for content */
@@ -44,8 +45,8 @@ footer {
     color: white;
     margin: 20px;
     padding: 20px;
-
   }
+
 
 
 
