Sun, Dec 24, 2023, 12:25 AM +05:00

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -18,6 +18,15 @@
   h1 {
     text-align: center; /* Indent in center */
     text-decoration-line: underline;
+    background-color: #333230;
+    font-weight: bold;
+    color: #a8622f;
+    }
+
+  h2 {
+    text-align: center; /* Indent in center */
+    text-decoration-line: underline;
+    font-style: italic;
     }
 
   nav {
