--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -4,6 +4,10 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="/static/styles.css" rel="stylesheet">
+
+        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <meta name="description" content="add birthdays of your loved ones to remember">
+
         <title>Birthdays</title>
     </head>
     <body>
