--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -19,6 +19,12 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                <form method='Post'>
+                    <input type=text placeholder='Name'>
+                    <input type=month placeholder='Month'>
+                    <input type=dat placeholder='Day'>
+                    <button type=submit>Add Birthday</button>
+                </form>
             </div>
 
             <div class="section">
