--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -19,7 +19,7 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
-                <form method='Post'>
+                <form action="app.py" method='POST'>
                     <input type=text placeholder='Name'>
                     <input type=month placeholder='Month'>
                     <input type=dat placeholder='Day'>
