Tue, Dec 26, 2023, 7:02 AM -08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -21,8 +21,8 @@
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
                 <form action="app.py" method='POST'>
                     <input type=text placeholder='Name'>
-                    <input type=month placeholder='Month'>
-                    <input type=dat placeholder='Day'>
+                    <input type=text placeholder='Month'>
+                    <input type=text min= placeholder='Day'>
                     <button type=submit>Add Birthday</button>
                 </form>
             </div>
