--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -20,9 +20,9 @@
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
                 <form id='unique'action="app.py" method='POST'>
-                    <input type=text placeholder='Name'>
-                    <input type=number min=1 max=12 placeholder='Month'>
-                    <input type=number min=1 max=31 placeholder='Day'>
+                    <input type=text id=name placeholder='Name'>
+                    <input type=number id =month min=1 max=12 placeholder='Month'>
+                    <input type=number id=day min=1 max=31 placeholder='Day'>
                     <button type=submit>Add Birthday</button>
                 </form>
             </div>
@@ -39,6 +39,12 @@
                     </thead>
                     <tbody>
                         <!-- TODO: Loop through the database entries to display them in this table -->
+                        {% for person in people %}
+                            <tr>
+                                <td>{{ person.name }}</td>
+                                <td>{{ person.month }} / {{ person.day }}</td>
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
