Tue, Dec 26, 2023, 7:21 AM -08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -19,7 +19,7 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
-                <form id='unique'action="app.py" method='POST'>
+                <form id='unique'action="/" method='POST'>
                     <input type=text id=name placeholder='Name'>
                     <input type=number id =month min=1 max=12 placeholder='Month'>
                     <input type=number id=day min=1 max=31 placeholder='Day'>
