--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -20,9 +20,9 @@
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
                 <form action="/" method='POST'>
-                    <input type=text id=name placeholder='Name'>
-                    <input type=number id =month min=1 max=12 placeholder='Month'>
-                    <input type=number id=day min=1 max=31 placeholder='Day'>
+                    <input type=text name=name placeholder='Name'>
+                    <input type=number name=month min=1 max=12 placeholder='Month'>
+                    <input type=number name=day min=1 max=31 placeholder='Day'>
                     <button type=submit>Add Birthday</button>
                 </form>
             </div>
