--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <h1>Get a Stock(s) Quote</h1>
     <form action="/quote" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
