--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -7,12 +7,7 @@
 {% block main %}
     <h1>Get a Stock(s) Quote</h1>
     <form action="/quote" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <input type=text id=symbol name=symbol placeholder='Symbol'>
+        <button type="submit">Get Quote</button>
     </form>
 {% endblock %}
