--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -10,4 +10,11 @@
         <input type=text id=symbol name=symbol placeholder='Symbol'>
         <button type="submit">Get Quote</button>
     </form>
+
+    {% if quote %}
+
+
+
+    {% endif %}
+
 {% endblock %}
