--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -7,12 +7,15 @@
 {% block main %}
     <h1>Get a Stock(s) Quote</h1>
     <form action="/quote" method="post">
+        <label for='symbol'>Symbol</label>
         <input type=text id=symbol name=symbol placeholder='Symbol'>
         <button type="submit">Get Quote</button>
     </form>
 
     {% if quote %}
 
+    <h3>{{ quote['name'] }} ({{ quote['symbol'] }})</h3>
+    <p>Price: {{ quote['price']|usd }}</p>
 
 
     {% endif %}
