Thu, Dec 28, 2023, 1:15 AM +05:00

--- a/finance/templates/quote.html
+++ b/finance/templates/quote.html
@@ -12,9 +12,9 @@
     </form>
 
     {% if quote %}
-
-    <h3>Name:{{ quote['name'] }} Symbol:({{ quote['symbol'] }})</h3>
-    <p>Price: ${{ quote['price']}}</p>
+    <pre></pre>
+    <h3>Name:{{ quote['name'] }} Symbol:{{ quote['symbol'] }}</h3>
+    <p><pre></pre>Price: ${{ quote['price']}}</p>
 
 
     {% endif %}
