Thu, Dec 28, 2023, 1:51 AM +05:00

--- a/finance/templates/buy.html
+++ b/finance/templates/buy.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <h1>Get a Stock(s) Quote</h1>
-    <form action="/quote" method="post">
+    <form action="/buy" method="post">
         <input type=text id=symbol name=symbol placeholder='Symbol'>
         <button type="submit">Get Quote</button>
     </form>
